<resources>
    <string name="app_name">Bismillah_Movie_Expert</string>
    <string name="image_description">Image</string>
    <string name="text_primary">Sample of title text</string>
    <string name="text_subtitle">Sample of subtitle text</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Maps</string>
    <string name="menu_favorite">Favourite</string>

    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="title_favourite">favourite</string>
    <string name="description">Description</string>
    <string name="title">title</string>

    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="movie">Movie</string>
    <string name="fav_movie">Favourite Movie</string>
    <string name="description_movie">Description</string>
    <string name="language">language</string>
    <string name="launching">launching</string>
    <string name="popularity">popularity</string>
</resources>