<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:paddingTop="24dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ib_fav_movie"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/ic_fav_border"
        android:background="@android:color/transparent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn=""
        android:contentDescription="favourite button"
        app:layout_constraintBottom_toBottomOf="@+id/poster_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/poster_movie"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/poster_movie"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="18dp"
        android:src="@color/imovie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/title_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/popular_movie"
        app:layout_constraintTop_toBottomOf="@+id/popular_movie"
        tools:text="@string/title"/>

    <TextView
        android:id="@+id/popular_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="start"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster_movie"
        tools:text="@string/popularity"/>


    <TextView
        android:id="@+id/launching_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_movie"
        tools:text="@string/launching"/>

    <TextView
        android:id="@+id/language_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launching_movie"
        tools:text="@string/language"/>

    <TextView
        android:id="@+id/desc_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/lato_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_movie" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/lato_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_movie"
        tools:text="Fill Desc" />

</androidx.constraintlayout.widget.ConstraintLayout>
